--- a/LoginWithRxSwift/.gitignore
+++ b/LoginWithRxSwift/.gitignore
@@ -5,7 +5,7 @@
 ## Build generated
 build/
 DerivedData/
-
+.DS_Store
 ## Various settings
 *.pbxuser
 !default.pbxuser
@@ -46,3 +46,4 @@ playground.xcworkspace
 # https://guides.cocoapods.org/using/using-cocoapods.html#should-i-check-the-pods-directory-into-source-control
 #
 Pods/
+.idea/
